style: fix mobile horizontal scroll

--- a/src/apps/portfolio/src/app/globals.css
+++ b/src/apps/portfolio/src/app/globals.css
@@ -1,1 +1,9 @@
 @import "tailwindcss";
+
+body,
+html {
+  width: 100vw;
+  height: 100vh;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
